fix: commit to continue testing

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,8 @@
 full-akka-app {
-  routes.ask-timeout = 10s
+  routes {
+    ask-timeout = 40s
+    ask-timeout = ${?ASK_TIMEOUT}
+  }
 
    github {
     token = "Token ghp_"
