fix general functionalities

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,8 +1,14 @@
 full-akka-app {
-  routes.ask-timeout = 10s
-
+  routes.ask-timeout = 60s
+  akka.http.server.request-timeout = 60s
    github {
     token = "Token ghp_"
     token = ${?GH_TOKEN}
    }
 }
+
+akka {
+  log-dead-letters-during-shutdown = off
+  log-dead-letters = off
+}
+
